[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfldm"
version = "1.0.0"
authors = [
  { name="Phillip Hall", email="phall131@pm.me" },
]
description = "A library for controlling Fldigi via xmlrpc"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil >= 5.9.5",
    "xvfbwrapper >= 0.2.9"
]

[project.urls]
"Homepage" = "https://github.com/philliphall131/pyfldm"